--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Thea Choem
+timezone: Asia/Phnom_Penh
 email: theacheng.g6@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
