--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,9 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+collections:
+  - timelines
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
