--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,7 @@
 title: Thea Choem
 timezone: Asia/Phnom_Penh
 email: theacheng.g6@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Phnom Penh, Cambodia
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: theachoem
