--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ timezone: Asia/Phnom_Penh
 email: theacheng.g6@gmail.com
 description: Phnom Penh, Cambodia
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: theachoem
 github_username:  theachoem
 
