exclude about.md file

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,8 @@ collections:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
+  - about.md
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
