--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://v3.theachoem.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: theachoem
 github_username:  theachoem
+markdown: kramdown
 
 # Build settings
 theme: minima
