--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ github_username:  theachoem
 markdown: kramdown
 
 # Build settings
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
