remove twitter & add facebook

--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description: 1 year of experience in designing and developing cross-platform mob
 footer_description: Phnom Penh, Cambodia
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.theachoem.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: theachoem
 github_username:  theachoem
+facebook_username: theacheng.g6
 markdown: kramdown
 
 # Build settings
