update description & location on footer & seo

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: Thea Choem
 timezone: Asia/Phnom_Penh
 email: theacheng.g6@gmail.com
-description: 1 year of experience in designing and developing cross-platform mobile applications. Based in Phnom Penh, Cambodia📍
-footer_description: Phnom Penh, Cambodia
+description: Designer + Developer Based in Phnom Penh
+location: Phnom Penh, Cambodia📍
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.theachoem.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  theachoem
