add testimonials & its style

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ plugins:
 
 collections:
   - timelines
+  - testimonials
 
 # Exclude from processing.
 # The following items will not be processed, by default.
