exclude docs folder

--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ exclude:
   - _posts/2021-10-02-deeplink-flutter-step1-android.md
   - _posts/2021-10-08-deeplink-flutter-step2-ios.md
   - _posts/2021-10-08-deeplink-flutter-step3-handing-incoming-url.md
+  - docs/
   # - blogs.md
 #   - .sass-cache/
 #   - .jekyll-cache/
