update domain to thea.juniorise.com

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ email: theacheng.g6@gmail.com
 description: Designer + Developer Based in Phnom Penh
 location: Phnom Penh, Cambodia📍
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.theachoem.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://thea.juniorise.com" # the base hostname & protocol for your site, e.g. http://example.com
 upwork_url: https://www.upwork.com/freelancers/~010b46e81fdb2bea7c
 github_username:  theachoem
 linkedin_username: theachoem
